--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </nav>
 
-    <header class="hero-section text-white d-flex align-items-center justify-content-center text-center">
+    <header class="hero-bg text-white d-flex align-items-center justify-content-center text-center">
         <div class="container">
             <h1 class="hero-title">Run on the wheel of luxury</h1>
             <p class="hero-subtitle">Explore everything the Hamster Hotel has to offer, from award-winning dining to spa
