--- a/index.html
+++ b/index.html
@@ -14,29 +14,37 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark custom-header py-3">
-        <div class="container-fluid justify-content-center">
-            <div class="d-flex align-items-center justify-content-between w-100 split-nav">
+<nav class="navbar navbar-expand-lg navbar-dark custom-header py-3">
+    <div class="container-fluid">
+        
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-                <ul class="navbar-nav flex-row">
+        <div class="collapse navbar-collapse" id="navbarNav">
+
+            <div class="d-lg-flex align-items-center justify-content-between w-100 split-nav mx-auto">
+
+                <ul class="navbar-nav flex-row flex-lg-row">
                     <li class="nav-item mx-3"><a class="nav-link" href="#">Overview</a></li>
                     <li class="nav-item mx-3"><a class="nav-link" href="#">Rooms</a></li>
                     <li class="nav-item mx-3"><a class="nav-link" href="#">Packages</a></li>
                 </ul>
 
-                <a class="navbar-brand nav-brand mx-3" href="#">
+                <a class="navbar-brand nav-brand d-none d-lg-block mx-3" href="#">
                     <img src="/hotelMarkupAssets/Logo.png" alt="Hamster Hotel Logo" class="logo-img" />
                 </a>
 
-                <ul class="navbar-nav flex-row">
+                <ul class="navbar-nav flex-row flex-lg-row">
                     <li class="nav-item mx-3"><a class="nav-link" href="#">Pool</a></li>
                     <li class="nav-item mx-3"><a class="nav-link" href="#">Activities</a></li>
                     <li class="nav-item mx-3"><a class="nav-link" href="#">Contact</a></li>
                 </ul>
-
             </div>
+            
         </div>
-    </nav>
+    </div>
+</nav>
 
     <header class="hero-bg text-white d-flex align-items-center justify-content-center text-center">
         <div class="container">
