--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hamster Hotel</title>
-
-    <!-- Fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;700&family=Source+Sans+Pro:wght@400;700&display=swap"
         rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-    <!-- Custom Styles -->
     <link rel="stylesheet" href="/styles/styles.css" />
 </head>
 
@@ -50,10 +46,10 @@
 
         </div>
     </nav>
-
-    <!-- Hero Section -->
+    
+    <!-- First Section -->
     <header class="hero-bg text-white d-flex align-items-center justify-content-center text-center">
-        <div class="container">
+        <div class="container bg-box">
             <h1 class="hero-title">Run on the wheel of luxury</h1>
             <p class="hero-subtitle">
                 Explore everything the Hamster Hotel has to offer, from award-winning dining to spa and wellness options
@@ -164,82 +160,79 @@
 
     <!-- Packages Section -->
     <section class="packages-section py-5">
-        <div class="container">
-            <h2 class="packages-title text-center mb-5">Our Packages</h2>
-            <div class="row">
-
-                <!-- Beach Wedding Package -->
-                <div class="col-md-6 mb-4">
-                    <div class="card h-100 package-card border-0">
-                        <div class="row g-0 align-items-center">
-                            <div class="col-md-4">
-                                <img src="/hotelMarkupAssets/hamsterwedding.jpg" alt="Beach Wedding Package"
-                                    class="img-fluid rounded-start package-img" />
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body text-start">
-                                    <h5 class="package-name">Beach Wedding Package</h5>
-                                    <p class="package-price">Starting at <strong>$1,500.00</strong></p>
-                                    <p class="package-desc">
-                                        Celebrate your love with a beach-themed wedding featuring palm trees, tropical
-                                        drinks, and the soothing sound of waves. Our adorable hamster couple adds a
-                                        unique touch to your special day.
-                                    </p>
-                                </div>
+    <div class="container">
+        <h2 class="packages-title text-center mb-5">Our Packages</h2>
+        <div class="row justify-content-center"> 
+            
+            <div class="col-md-12 col-lg-8 mb-4">
+                <div class="card h-100 package-card border-0">
+                    <div class="row g-0 align-items-center">
+                        <div class="col-md-4">
+                            <img src="/hotelMarkupAssets/hamsterwedding.jpg" alt="Beach Wedding Package"
+                                class="img-fluid rounded-start package-img" />
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body text-start">
+                                <h5 class="package-name">Beach Wedding Package</h5>
+                                <p class="package-price">Starting at <strong>$1,500.00</strong></p>
+                                <p class="package-desc">
+                                    Celebrate your love with a beach-themed wedding featuring palm trees, tropical
+                                    drinks, and the soothing sound of waves. Our adorable hamster couple adds a
+                                    unique touch to your special day.
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <!-- Full Bloom Package -->
-                <div class="col-md-6 mb-4">
-                    <div class="card h-100 package-card border-0">
-                        <div class="row g-0 align-items-center">
-                            <div class="col-md-4">
-                                <img src="/hotelMarkupAssets/hamsterspring.jpg" alt="Full Bloom Package"
-                                    class="img-fluid rounded-start package-img" />
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body text-start">
-                                    <h5 class="package-name">Full Bloom Package</h5>
-                                    <p class="package-price">Starting at <strong>$1,200.00</strong></p>
-                                    <p class="package-desc">
-                                        Spring is in the air! Enjoy the beauty of the season with our enchanting
-                                        floral-themed package. Our furry friends dress in their finest spring attire to
-                                        bring charm to your event.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Cheese & Squeak Tour -->
-                <div class="col-md-6 mx-auto mb-4">
-                    <div class="card h-100 package-card border-0">
-                        <div class="row g-0 align-items-center">
-                            <div class="col-md-4">
-                                <img src="/hotelMarkupAssets/hamstercheese.jpg" alt="Cheese and Squeak Tour"
-                                    class="img-fluid rounded-start package-img" />
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body text-start">
-                                    <h5 class="package-name">Cheese & Squeak Tour</h5>
-                                    <p class="package-price">Starting at <strong>$1,000.00</strong></p>
-                                    <p class="package-desc">
-                                        Embark on a delicious adventure with our cheese-themed tour. Perfect for food
-                                        lovers and rodent enthusiasts, this package includes tastings, transportation,
-                                        and souvenir photos.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
+
+            <div class="col-md-12 col-lg-8 mb-4">
+                <div class="card h-100 package-card border-0">
+                    <div class="row g-0 align-items-center">
+                        <div class="col-md-4 order-md-2"> 
+                            <img src="/hotelMarkupAssets/hamsterspring.jpg" alt="Full Bloom Package"
+                                class="img-fluid rounded-start package-img" />
+                        </div>
+                        <div class="col-md-8 order-md-1"> 
+                            <div class="card-body text-start">
+                                <h5 class="package-name">Full Bloom Package</h5>
+                                <p class="package-price">Starting at <strong>$1,200.00</strong></p>
+                                <p class="package-desc">
+                                    Spring is in the air! Enjoy the beauty of the season with our enchanting
+                                    floral-themed package. Our furry friends dress in their finest spring attire to
+                                    bring charm to your event.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-12 col-lg-8 mb-4">
+                <div class="card h-100 package-card border-0">
+                    <div class="row g-0 align-items-center">
+                        <div class="col-md-4">
+                            <img src="/hotelMarkupAssets/hamstercheese.jpg" alt="Cheese and Squeak Tour"
+                                class="img-fluid rounded-start package-img" />
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body text-start">
+                                <h5 class="package-name">Cheese & Squeak Tour</h5>
+                                <p class="package-price">Starting at <strong>$1,000.00</strong></p>
+                                <p class="package-desc">
+                                    Embark on a delicious adventure with our cheese-themed tour. Perfect for food
+                                    lovers and rodent enthusiasts, this package includes tastings, transportation,
+                                    and souvenir photos.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Amenities Section -->
     <section class="amenities-section py-5 custom-dark-bg text-white">
