trying to fix reserve a room section

--- a/index.html
+++ b/index.html
@@ -302,9 +302,11 @@
         </div>
     </section>
 
+    
     <!-- Footer -->
     <footer class="footer custom-header text-white text-center py-3">
         <div class="container">
+            <img src="/hotelMarkupAssets/Logo.png" alt="">
             <p class="mb-0">Made with Adobe XD • Last updated Jan 2, 2019, 8:14 AM</p>
             <p class="mb-0">&copy; 2025 Hamster Hotel. All rights reserved.</p>
         </div>
