--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li class="nav-item mx-3"><a class="nav-link" href="#">Pool</a></li>
                         <li class="nav-item mx-3"><a class="nav-link" href="#">Activities</a></li>
                         <li class="nav-item mx-3"><a class="nav-link" href="#">Contact</a></li>
-                        <a href="#" class="btn btn-outline-primary room-reserve-btn color">Reserve</a>
+                        <a href="#" class="btn btn-outline-primary room-reserve-btn">Reserve</a>
                     </ul>
                 </div>
             </div>
@@ -267,8 +267,8 @@
     <!-- Reservation Section -->
 
 
-    <div class="container text-center reservation-container room">
-        <h2 class="reservation-title mb-4 ">Reserve a Room</h2>
+    <div class="container text-center reservation-container cont">
+        <h2 class="reservation-title mb-4">Reserve a Room</h2>
         <form class="reservation-inline-form d-flex flex-wrap justify-content-center align-items-end gap-3">
 
             <div>
@@ -301,7 +301,7 @@
 
         </form>
     </div>
-    <section class="reservation-inline-section py-5 reservation-bg-image">
+    <section class="reservation-inline-section py-5 reservation-bg-image cont">
 
     </section>
 
