--- a/index.html
+++ b/index.html
@@ -301,7 +301,8 @@
 
         </form>
     </div>
-    <section class="reservation-inline-section py-5 reservation-bg-image cont">
+    <section class="d-flex justify-content-center">
+        <img src="/hotelMarkupAssets/hamsterreserve.jpg" class="reserveImg" alt="">
 
     </section>
 
