--- a/index.html
+++ b/index.html
@@ -311,9 +311,12 @@
 
     <!-- Footer -->
     <footer class="footer custom-header text-white text-center py-3">
-        <div class="container">
+        <div class="container bottomNAV">
             <img src="/hotelMarkupAssets/Logo.png" alt="">
+            <br>
+            <br>
             <p class="mb-0">Made with Adobe XD • Last updated Jan 2, 2019, 8:14 AM</p>
+            <br>
             <p class="mb-0">&copy; 2025 Hamster Hotel. All rights reserved.</p>
         </div>
     </footer>
