--- a/index.html
+++ b/index.html
@@ -14,39 +14,52 @@
 
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark custom-header py-3">
-        <div class="container-fluid">
+   <!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark custom-header py-3">
+    <div class="container-fluid">
+        
+        <!-- Logo for mobile (left side) -->
+        <a class="navbar-brand d-lg-none" href="#">
+            <img src="/hotelMarkupAssets/Logo.png" alt="Hamster Hotel Logo" class="logo-img" />
+        </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <!-- Hamburger toggle button -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <div class="d-lg-flex align-items-center justify-content-between w-100 split-nav mx-auto">
+        <!-- Collapsible navbar content -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="split-nav mx-auto">
 
-                    <ul class="navbar-nav flex-row flex-lg-row">
-                        <li class="nav-item mx-3"><a class="nav-link" href="#">Overview</a></li>
-                        <li class="nav-item mx-3"><a class="nav-link" href="#">Rooms</a></li>
-                        <li class="nav-item mx-3"><a class="nav-link" href="#">Packages</a></li>
-                    </ul>
+                <!-- Left navigation items -->
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#">Overview</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Rooms</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Packages</a></li>
+                </ul>
 
-                    <a class="navbar-brand nav-brand d-none d-lg-block mx-3" href="#">
-                        <img src="/hotelMarkupAssets/Logo.png" alt="Hamster Hotel Logo" class="logo-img" />
-                    </a>
+                <!-- Center logo (desktop only) -->
+                <a class="navbar-brand nav-brand d-none d-lg-block" href="#">
+                    <img src="/hotelMarkupAssets/Logo.png" alt="Hamster Hotel Logo" class="logo-img" />
+                </a>
 
-                    <ul class="navbar-nav flex-row flex-lg-row">
-                        <li class="nav-item mx-3"><a class="nav-link" href="#">Pool</a></li>
-                        <li class="nav-item mx-3"><a class="nav-link" href="#">Activities</a></li>
-                        <li class="nav-item mx-3"><a class="nav-link" href="#">Contact</a></li>
-                        <a href="#" class="btn btn-outline-primary room-reserve-btn">Reserve</a>
-                    </ul>
-                </div>
+                <!-- Right navigation items -->
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#">Pool</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Activities</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item">
+                        <a href="#" class="btn btn-outline-light room-reserve-btn">Reserve</a>
+                    </li>
+                </ul>
+                
             </div>
-
         </div>
-    </nav>
+
+    </div>
+</nav>
 
     <!-- First Section -->
     <header class="hero-bg text-white d-flex align-items-center justify-content-center text-center">
