nav reverse button

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <li class="nav-item"><a class="nav-link" href="#">Activities</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                     <li class="nav-item">
-                        <a href="#" class="btn btn-outline-light room-reserve-btn">Reserve</a>
+                        <a href="#" class="btn btn-outline-light reserve">Reserve</a>
                     </li>
                 </ul>
                 
