--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 
                     <!-- Right navigation items -->
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#">Pool</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Activities</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Amenities</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                         <li class="nav-item">
                             <a href="#" class="btn btn-outline-light reserve">Reserve</a>
