--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </ul>
 
                     <!-- Center logo (desktop only) -->
-                    <a class="navbar-brand nav-brand d-none d-lg-block" href="#">
+                    <a class="navbar-brand nav-brand d-none d-lg-block logo-center-container" href="#">
                         <img src="/hotelMarkupAssets/Logo.png" alt="Hamster Hotel Logo" class="logo-img" />
                     </a>
 
@@ -90,7 +90,8 @@
                         small mammal with extravagance in mind. Escape to the warm comforts of stunning rooms, a
                         relaxing spa, and a pool with a beach side view.
                     </p>
-                    <p class="welcome-text"> Inspired by the warm beauty of the California Coast, we invite you to enjoy the rich
+                    <p class="welcome-text"> Inspired by the warm beauty of the California Coast, we invite you to enjoy
+                        the rich
                         accommodations along with our unmatched luxury. Discover the satisfaction of indulging in our
                         quality rooms, and thank you for choosing La Petite Maison.</p>
 
