--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
 
                     <ul class="navbar-nav">
 
-                        <li class="nav-item"><a class="nav-link" href="#">Pool</a></li>
-
-                        <li class="nav-item"><a class="nav-link" href="#">Activities</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Amenities</a></li>
 
                         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
 
