adjusting emblem-icons

--- a/index.html
+++ b/index.html
@@ -190,15 +190,15 @@
 
 
 
-                    <div class="row text-center mt-5">
+                    <div class="row text-center justify-content-between mt-5">
 
-                        <div class="col-md-3 mb-3">
+                        <div class="col-md-4 mb-3">
 
                             <img src="/hotelMarkupAssets/awardfinest.png" alt="Finest Quality" class="emblem-icon" />
 
                         </div>
 
-                        <div class="col-md-3 mb-3">
+                        <div class="col-md-4 mb-3">
 
                             <img src="/hotelMarkupAssets/awardsatisfaction.png" alt="Satisfaction"
 
@@ -208,7 +208,7 @@
 
                         </div>
 
-                        <div class="col-md-3 mb-3">
+                        <div class="col-md-4 mb-3">
 
                             <img src="/hotelMarkupAssets/awardgenuine.png" alt="Genuine" class="emblem-icon" />
 
