fixing packages section with correct styling

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 
                                 <div class="card-body text-start">
 
-                                    <h5 class="package-name">Cheese & Squeak Tour</h5>
+                                    <h5 class="package-name">Cheese and Seed Tour Package</h5>
 
                                     <p class="package-price">Starting at <strong>$1,000.00</strong></p>
 
