--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
     <link rel="stylesheet" href="/styles/styles.css" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap" rel="stylesheet">
+
 </head>
 
 
@@ -250,7 +254,7 @@
 
                             <h3 class="room-name">Queen Room</h3>
 
-                            <p class="room-size">400 SQ.FT</p>
+                            <p class="room-size">850 SQ FT room with city view </p>
 
                             <ul class="room-details list-unstyled">
 
@@ -284,7 +288,7 @@
 
                             <h3 class="room-name">King Room</h3>
 
-                            <p class="room-size">600 SQ.FT</p>
+                            <p class="room-size">950 SQ FT room with beach view</p>
 
                             <ul class="room-details list-unstyled">
 
@@ -318,7 +322,7 @@
 
                             <h3 class="room-name">Beach Side Suite</h3>
 
-                            <p class="room-size">1,000 SQ.FT</p>
+                            <p class="room-size">1,500 SQ FT Suite with beach view</p>
 
                             <ul class="room-details list-unstyled">
 
@@ -354,7 +358,7 @@
 
         <div class="container">
 
-            <h2 class="packages-title text-center mb-5">Our Packages</h2>
+            <h2 class="packages-title text-center mb-5">Packages</h2>
 
             <div class="row justify-content-center">
 
@@ -383,11 +387,10 @@
 
                                     <p class="package-desc">
 
-                                        Celebrate your love with a beach-themed wedding featuring palm trees, tropical
-
-                                        drinks, and the soothing sound of waves. Our adorable hamster couple adds a
-
-                                        unique touch to your special day.
+                                        Feel the warmth of the beach as the flames in your hearts ignite during our
+                                        romantic beach side wedding. All wedding packages include catering, an open bar,
+                                        and one tier wedding cake (9" Vanilla standard cake). A private dinner for your
+                                        closets family members and friends will be provided after the ceremony.
 
                                     </p>
 
@@ -426,11 +429,10 @@
 
                                     <p class="package-desc">
 
-                                        Spring is in the air! Enjoy the beauty of the season with our enchanting
-
-                                        floral-themed package. Our furry friends dress in their finest spring attire to
-
-                                        bring charm to your event.
+                                        Enjoy the shade of our cherry trees as you join us during our spring time
+                                        celebration. We invite you to our orchards for cherry, strawberry, and apple
+                                        picking that is open all day. We end each evening with fresh, vegetable centric
+                                        dinners along with a live show from local musicians.
 
                                     </p>
 
@@ -469,11 +471,11 @@
 
                                     <p class="package-desc">
 
-                                        Embark on a delicious adventure with our cheese-themed tour. Perfect for food
-
-                                        lovers and rodent enthusiasts, this package includes tastings, transportation,
-
-                                        and souvenir photos.
+                                        Immerse yourself in the flavors of Cavia with our Cheese and Seed tour. We
+                                        consulted with connoisseurs from around the globe to bring you the best flavors
+                                        that nature has to offer, and create our cheeses right here at our local
+                                        creamery. Cheese and seeds are served all day and nightly spa treatment is
+                                        provided after dinner.
 
                                     </p>
 
@@ -507,8 +509,7 @@
 
             <p class="amenities-intro text-center mb-5">
 
-                Here at La Petite Maison, we invite you to enjoy our services in hope that you have the most relaxing
-
+                Here at La Petite Maison, we invite you to enjoy our services in hopes that you have the most relaxing
                 stay we can provide.
 
             </p>
@@ -577,19 +578,9 @@
 
                     <div>
 
-                        <label for="checkin" class="form-label text-white">Check-In</label>
+                        <label for="checkin" class="form-label text-white">Check In</label>
 
-                        <input type="date" id="checkin" class="form-control" />
-
-                    </div>
-
-
-
-                    <div>
-
-                        <label for="checkout" class="form-label text-white">Check-Out</label>
-
-                        <input type="date" id="checkout" class="form-control" />
+                        <input type="" id="checkin" class="form-control" />
 
                     </div>
 
@@ -597,9 +588,19 @@
 
                     <div>
 
-                        <label for="guests" class="form-label text-white">Guests</label>
+                        <label for="checkout" class="form-label text-white">Check Out</label>
 
-                        <input type="number" id="guests" class="form-control" min="1" />
+                        <input type="" id="checkout" class="form-control" />
+
+                    </div>
+
+
+
+                    <div>
+
+                        <label for="guests" class="form-label text-white">Number of Guests</label>
+
+                        <input type="" id="guests" class="form-control" min="1" />
 
                     </div>
 
@@ -609,13 +610,13 @@
 
                         <label for="roomtype" class="form-label text-white">Room Type</label>
 
-                        <select id="roomtype" class="form-select">
+                        <select id="" class="form-select">
 
-                            <option>Queen Room</option>
+                            <option></option>
 
-                            <option>King Room</option>
+                            <option></option>
 
-                            <option>Beach Side Suite</option>
+                            <option></option>
 
                         </select>
 
