--- a/index.html
+++ b/index.html
@@ -568,9 +568,9 @@
 
 
         <div class="row">
-            <div class="col reserveColor text-center">
+            <div class="col reserveColor text-left">
 
-                <h2 class="reservation-title mb-4">Reserve a Room</h2>
+                <h2 class="reservation-title mb-4 text-center">Reserve a Room</h2>
 
                 <form class="reservation-inline-form d-flex flex-wrap justify-content-center align-items-end gap-3">
 
