--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
                                     <h5 class="package-name">Beach Wedding Package</h5>
 
-                                    <p class="package-price">Starting at <strong>$1,500.00</strong></p>
+                                    <p class="package-price">Starting US <strong>$1,500.00</strong></p>
 
                                     <p class="package-desc">
 
@@ -425,7 +425,7 @@
 
                                     <h5 class="package-name">Full Bloom Package</h5>
 
-                                    <p class="package-price">Starting at <strong>$1,200.00</strong></p>
+                                    <p class="package-price">Starting US <strong>$1,000.00</strong></p>
 
                                     <p class="package-desc">
 
@@ -467,7 +467,7 @@
 
                                     <h5 class="package-name">Cheese and Seed Tour Package</h5>
 
-                                    <p class="package-price">Starting at <strong>$1,000.00</strong></p>
+                                    <p class="package-price">Starting US <strong>$1,200.00</strong></p>
 
                                     <p class="package-desc">
 
