--- a/index.html
+++ b/index.html
@@ -258,13 +258,16 @@
 
                             <ul class="room-details list-unstyled">
 
-                                <li>One queen-size bed</li>
+                                <li>One queen size bed</li>
 
-                                <li>Work desk and balcony</li>
+                                <li>Seed Bar, fireplace and large balcony</li>
 
-                                <li>Mini fridge and whirlpool tub</li>
+                                <li>Small kitchen with a refrigerator and stove</li>
 
                             </ul>
+
+                            <br>
+                            <br>
 
                             <a href="#" class="btn btn-outline-primary room-reserve-btn">Reserve</a>
 
@@ -292,13 +295,16 @@
 
                             <ul class="room-details list-unstyled">
 
-                                <li>One king-size bed</li>
+                                <li>One king size bed</li>
 
-                                <li>Work desk and balcony</li>
+                                <li>eed Bar, fireplace and large balcony</li>
 
-                                <li>Mini fridge and whirlpool tub</li>
+                                <li>Small kitchen with a refrigerator and stove</li>
 
                             </ul>
+
+                            <br>
+                            <br>
 
                             <a href="#" class="btn btn-outline-primary room-reserve-btn">Reserve</a>
 
@@ -326,13 +332,15 @@
 
                             <ul class="room-details list-unstyled">
 
-                                <li>King bed with sofa bed</li>
+                                <li>One California king size bed</li>
 
-                                <li>Work desk and balcony</li>
+                                <li>econd room with fireplace, hot tub, and balcony</li>
 
-                                <li>Mini fridge and whirlpool tub</li>
+                                <li>Seed Bar and coffee station</li>
+                                <li>Full kitchen with a refrigerator, stove, and island</li>
 
                             </ul>
+
 
                             <a href="#" class="btn btn-outline-primary room-reserve-btn">Reserve</a>
 
