--- a/index.html
+++ b/index.html
@@ -688,11 +688,11 @@
 
             <br>
 
-            <p class="mb-0">Made with Adobe XD • Last updated Jan 2, 2019, 8:14 AM</p>
+            <p class="mb-0">123 Sunflower Seed Rd., Cavia, California 95205</p>
 
             <br>
 
-            <p class="mb-0">&copy; 2025 Hamster Hotel. All rights reserved.</p>
+            <p class="mb-0">&copy; ©LA PETITE MAISON HOTELS LIMITED 1939-2018. ALL RIGHTS RESERVED.</p>
 
         </div>
 
