--- a/index.html
+++ b/index.html
@@ -137,9 +137,7 @@
 
             <p class="hero-subtitle">
 
-                Explore everything the Hamster Hotel has to offer, from award-winning dining to spa and wellness options
-
-                to gourmet dining to bungalows.
+               Explore everything the beach has to offer in our relaxing resort.
 
             </p>
 
