reserve section, and fixed formats

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 
 
 
-                <div class="col-md-12 col-lg-8 mb-4">
+                <div class="col-md-12 col-lg-8 mb-2">
 
                     <div class="card h-100 package-card border-0">
 
@@ -412,7 +412,7 @@
 
 
 
-                <div class="col-md-12 col-lg-8 mb-4">
+                <div class="col-md-12 col-lg-8 mb-2">
 
                     <div class="card h-100 package-card border-0">
 
@@ -454,7 +454,7 @@
 
 
 
-                <div class="col-md-12 col-lg-8 mb-4">
+                <div class="col-md-12 col-lg-8 mb-2">
 
                     <div class="card h-100 package-card border-0">
 
@@ -648,7 +648,7 @@
         <div class="row">
             <div class="col px-0">
                 <img src="/hotelMarkupAssets/hamsterreserve.jpg" class="text-center w-100"
-                    alt="hamster eating in a bowl">
+                    alt="hamster reserves his bowl of food">
             </div>
         </div>
 
