--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                             <div class="col-md-4 order-md-2">
 
                                 <img src="/hotelMarkupAssets/hamsterspring.jpg" alt="Full Bloom Package"
-                                    class="img-fluid rounded-start package-img" />
+                                    class="img-fluid package-img" />
 
                             </div>
 
