packages section class change

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
         <div class="container">
 
-            <h2 class="packages-title text-center mb-5">Packages</h2>
+            <h2 class="packages-title text-center mb-6">Packages</h2>
 
             <div class="row justify-content-center">
 
@@ -379,7 +379,7 @@
                             <div class="col-md-4">
 
                                 <img src="/hotelMarkupAssets/hamsterwedding.jpg" alt="Beach Wedding Package"
-                                    class="img-fluid rounded-start package-img" />
+                                    class="img-fluid  package-img" />
 
                             </div>
 
