--- a/index.html
+++ b/index.html
@@ -356,192 +356,59 @@
 
     </section>
 
-
-
-    <!-- Packages Section -->
-
-    <!-- <section class="packages-section py-5">
-
-        <div class="container">
-
-            <h2 class="packages-title text-center mb-6">Packages</h2>
-
-            <div class="row justify-content-center">
-
-
-
-                <div class="col-md-12 col-lg-8 mb-2">
-
-                    <div class="card h-100 package-card border-0">
-
-                        <div class="row g-0 align-items-center">
-
-                            <div class="col-md-4">
-
-                                <img src="/hotelMarkupAssets/hamsterwedding.jpg" alt="Beach Wedding Package"
-                                    class="img-fluid  package-img" />
-
-                            </div>
-
-                            <div class="col-md-8">
-
-                                <div class="card-body text-start">
-
-                                    <h5 class="package-name">Beach Wedding Package</h5>
-
-                                    <p class="package-price">Starting US <strong>$1,500.00</strong></p>
-
-                                    <p class="package-desc">
-
-                                        Feel the warmth of the beach as the flames in your hearts ignite during our
-                                        romantic beach side wedding. All wedding packages include catering, an open bar,
-                                        and one tier wedding cake (9" Vanilla standard cake). A private dinner for your
-                                        closets family members and friends will be provided after the ceremony.
-
-                                    </p>
-
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                </div>
-
-
-
-                <div class="col-md-12 col-lg-8 mb-2">
-
-                    <div class="card h-100 package-card border-0">
-
-                        <div class="row g-0 align-items-center">
-
-                            <div class="col-md-4 order-md-2">
-
-                                <img src="/hotelMarkupAssets/hamsterspring.jpg" alt="Full Bloom Package"
-                                    class="img-fluid package-img" />
-
-                            </div>
-
-                            <div class="col-md-8 order-md-1">
-
-                                <div class="card-body text-start">
-
-                                    <h5 class="package-name">Full Bloom Package</h5>
-
-                                    <p class="package-price">Starting US <strong>$1,000.00</strong></p>
-
-                                    <p class="package-desc">
-
-                                        Enjoy the shade of our cherry trees as you join us during our spring time
-                                        celebration. We invite you to our orchards for cherry, strawberry, and apple
-                                        picking that is open all day. We end each evening with fresh, vegetable centric
-                                        dinners along with a live show from local musicians.
-
-                                    </p>
-
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                </div>
-
-
-
-                <div class="col-md-12 col-lg-8 mb-2">
-
-                    <div class="card h-100 package-card border-0">
-
-                        <div class="row g-0 align-items-center">
-
-                            <div class="col-md-4">
-
-                                <img src="/hotelMarkupAssets/hamstercheese.jpg" alt="Cheese and Squeak Tour"
-                                    class="img-fluid rounded-start package-img" />
-
-                            </div>
-
-                            <div class="col-md-8">
-
-                                <div class="card-body text-start">
-
-                                    <h5 class="package-name">Cheese and Seed Tour Package</h5>
-
-                                    <p class="package-price">Starting US <strong>$1,200.00</strong></p>
-
-                                    <p class="package-desc">
-
-                                        Immerse yourself in the flavors of Cavia with our Cheese and Seed tour. We
-                                        consulted with connoisseurs from around the globe to bring you the best flavors
-                                        that nature has to offer, and create our cheeses right here at our local
-                                        creamery. Cheese and seeds are served all day and nightly spa treatment is
-                                        provided after dinner.
-
-                                    </p>
-
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                </div>
-
-
-
+    <div class="container mt-3 mb-5 text-center">
+        <h2 class="packages-title text-center mb-6">Packages</h2>
+
+        <!-- Beach Wedding Package (Image Left) -->
+        <div class="row align-items-center ">
+            <div class="col-md-6 d-flex justify-content-end img1">
+                <img src="/hotelMarkupAssets/hamsterwedding.jpg" alt="Beach Wedding Package"
+                    class="img-fluid package-img" />
             </div>
-
+            <div class="col-md-6 text-start img2">
+                <h5 class="package-name mt-4">Beach Wedding Package</h5>
+                <p class="package-price">Starting US <strong>$1,500.00</strong></p>
+                <p class="package-desc">Feel the warmth of the beach as the flames in your hearts ignite during our
+                    romantic beach side wedding. All wedding packages include catering, an open bar, and one tier
+                    wedding cake (9" Vanilla standard cake). A private dinner for your closest family members and
+                    friends will be provided after the ceremony.</p>
+            </div>
         </div>
 
-    </section> -->
-    <div class="container mt-3 mb-5 text-center">
-  <h2 class="packages-title text-center mb-6">Packages</h2>
+        <!-- Full Bloom Package (Centered) -->
+        <div class="row text-center">
+            <div class="col-md-6 img2 d-flex justify-content-end">
+                <div>
+                    <h5 class="package-name mt-5 bloom-text">Full Bloom Package</h5>
+                    <p class="package-price bloom-text">Starting US <strong>$1,000.00</strong></p>
+                    <p class="package-desc bloom-text">Enjoy the shade of our cherry trees as you join us during our
+                        spring time celebration. We invite you to our orchards for cherry, strawberry, and apple picking
+                        that is open all day. We end each evening with fresh, vegetable-centric dinners along with a
+                        live show from local musicians.</p>
+                </div>
+            </div>
+            <div class="col-md-6 d-flex justify-content-start img1">
+                <img src="/hotelMarkupAssets/hamsterspring.jpg" alt="Full Bloom Package"
+                    class="img-fluid package-img" />
+            </div>
+        </div>
 
-  <!-- Beach Wedding Package (Image Left) -->
-  <div class="row align-items-center ">
-    <div class="col-md-6 d-flex justify-content-end img1">
-      <img src="/hotelMarkupAssets/hamsterwedding.jpg" alt="Beach Wedding Package" class="img-fluid package-img" />
+        <!-- Cheese and Seed Tour (Image Left) -->
+        <div class="row align-items-center mb-5">
+            <div class="col-md-6 d-flex justify-content-end img1">
+                <img src="/hotelMarkupAssets/hamstercheese.jpg" alt="Cheese and Squeak Tour"
+                    class="img-fluid package-img img3" />
+            </div>
+            <div class="col-md-6 text-start img2">
+                <h5 class="package-name mt-4">Cheese and Seed Tour Package</h5>
+                <p class="package-price">Starting US <strong>$1,200.00</strong></p>
+                <p class="package-desc">Immerse yourself in the flavors of Cavia with our Cheese and Seed tour. We
+                    consulted with connoisseurs from around the globe to bring you the best flavors that nature has to
+                    offer, and create our cheeses right here at our local creamery. Cheese and seeds are served all day
+                    and nightly spa treatment is provided after dinner.</p>
+            </div>
+        </div>
     </div>
-    <div class="col-md-6 text-start img2">
-      <h5 class="package-name mt-4">Beach Wedding Package</h5>
-      <p class="package-price">Starting US <strong>$1,500.00</strong></p>
-      <p class="package-desc">Feel the warmth of the beach as the flames in your hearts ignite during our romantic beach side wedding. All wedding packages include catering, an open bar, and one tier wedding cake (9" Vanilla standard cake). A private dinner for your closest family members and friends will be provided after the ceremony.</p>
-    </div>
-  </div>
-
-  <!-- Full Bloom Package (Centered) -->
-  <div class="row text-center">
-    <div class="col-md-6 img2 d-flex justify-content-end">
-        <div>
-      <h5 class="package-name mt-5 bloom-text">Full Bloom Package</h5>
-      <p class="package-price bloom-text">Starting US <strong>$1,000.00</strong></p>
-      <p class="package-desc bloom-text">Enjoy the shade of our cherry trees as you join us during our spring time celebration. We invite you to our orchards for cherry, strawberry, and apple picking that is open all day. We end each evening with fresh, vegetable-centric dinners along with a live show from local musicians.</p></div>
-    </div>
-    <div class="col-md-6 d-flex justify-content-start img1">
-      <img src="/hotelMarkupAssets/hamsterspring.jpg" alt="Full Bloom Package" class="img-fluid package-img" />
-    </div>
-  </div>
-
-  <!-- Cheese and Seed Tour (Image Left) -->
-  <div class="row align-items-center mb-5">
-    <div class="col-md-6 d-flex justify-content-end img1">
-      <img src="/hotelMarkupAssets/hamstercheese.jpg" alt="Cheese and Squeak Tour" class="img-fluid package-img img3" />
-    </div>
-    <div class="col-md-6 text-start img2">
-      <h5 class="package-name mt-4">Cheese and Seed Tour Package</h5>
-      <p class="package-price">Starting US <strong>$1,200.00</strong></p>
-      <p class="package-desc">Immerse yourself in the flavors of Cavia with our Cheese and Seed tour. We consulted with connoisseurs from around the globe to bring you the best flavors that nature has to offer, and create our cheeses right here at our local creamery. Cheese and seeds are served all day and nightly spa treatment is provided after dinner.</p>
-    </div>
-  </div>
-</div>
 
 
 
