readme and index corrections for images

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <a class="navbar-brand d-lg-none" href="#">
 
-                <img src="/hotelMarkupAssets/Logo.png" alt="Hamster Hotel Logo" class="logo-img" />
+                <img src="./hotelMarkupAssets/Logo.png" alt="Hamster Hotel Logo" class="logo-img" />
 
             </a>
 
@@ -87,7 +87,7 @@
 
                     <a class="navbar-brand nav-brand d-none d-lg-block" href="#">
 
-                        <img src="/hotelMarkupAssets/Logo.png" alt="Hamster Hotel Logo" class="logo-img" />
+                        <img src="./hotelMarkupAssets/Logo.png" alt="Hamster Hotel Logo" class="logo-img" />
 
                     </a>
 
@@ -159,7 +159,7 @@
 
                 <div class="col-md-4 text-center text-md-end mb-4 mb-md-0">
 
-                    <img src="/hotelMarkupAssets/hamsterhomejpg.jpg" alt="Relaxing Hamster"
+                    <img src="./hotelMarkupAssets/hamsterhomejpg.jpg" alt="Relaxing Hamster"
                         class="img-fluid hamster-img" />
 
                 </div>
@@ -193,13 +193,13 @@
 
                         <div class="col-md-4 mb-3">
 
-                            <img src="/hotelMarkupAssets/awardfinest.png" alt="Finest Quality" class="emblem-icon" />
+                            <img src="./hotelMarkupAssets/awardfinest.png" alt="Finest Quality" class="emblem-icon" />
 
                         </div>
 
                         <div class="col-md-4 mb-3">
 
-                            <img src="/hotelMarkupAssets/awardsatisfaction.png" alt="Satisfaction"
+                            <img src="./hotelMarkupAssets/awardsatisfaction.png" alt="Satisfaction"
                                 class="emblem-icon" />
 
 
@@ -208,7 +208,7 @@
 
                         <div class="col-md-4 mb-3">
 
-                            <img src="/hotelMarkupAssets/awardgenuine.png" alt="Genuine" class="emblem-icon" />
+                            <img src="./hotelMarkupAssets/awardgenuine.png" alt="Genuine" class="emblem-icon" />
 
 
 
@@ -246,7 +246,7 @@
 
                     <div class="card h-100 text-center room-card">
 
-                        <img src="/hotelMarkupAssets/room1.jpg" alt="Queen Room" class="card-img-top room-img" />
+                        <img src="./hotelMarkupAssets/room1.jpg" alt="Queen Room" class="card-img-top room-img" />
 
                         <div class="card-body">
 
@@ -283,7 +283,7 @@
 
                     <div class="card h-100 text-center room-card">
 
-                        <img src="/hotelMarkupAssets/room2.jpg" alt="King Room" class="card-img-top room-img" />
+                        <img src="./hotelMarkupAssets/room2.jpg" alt="King Room" class="card-img-top room-img" />
 
                         <div class="card-body">
 
@@ -320,7 +320,7 @@
 
                     <div class="card h-100 text-center room-card">
 
-                        <img src="/hotelMarkupAssets/room3.jpg" alt="Beach Side Suite" class="card-img-top room-img" />
+                        <img src="./hotelMarkupAssets/room3.jpg" alt="Beach Side Suite" class="card-img-top room-img" />
 
                         <div class="card-body">
 
@@ -362,7 +362,7 @@
         <!-- Beach Wedding Package (Image Left) -->
         <div class="row align-items-center ">
             <div class="col-md-6 d-flex justify-content-end img1">
-                <img src="/hotelMarkupAssets/hamsterwedding.jpg" alt="Beach Wedding Package"
+                <img src="./hotelMarkupAssets/hamsterwedding.jpg" alt="Beach Wedding Package"
                     class="img-fluid package-img" />
             </div>
             <div class="col-md-6 text-start img2">
@@ -388,7 +388,7 @@
                 </div>
             </div>
             <div class="col-md-6 d-flex justify-content-start img1">
-                <img src="/hotelMarkupAssets/hamsterspring.jpg" alt="Full Bloom Package"
+                <img src="./hotelMarkupAssets/hamsterspring.jpg" alt="Full Bloom Package"
                     class="img-fluid package-img" />
             </div>
         </div>
@@ -396,7 +396,7 @@
         <!-- Cheese and Seed Tour (Image Left) -->
         <div class="row align-items-center mb-5">
             <div class="col-md-6 d-flex justify-content-end img1">
-                <img src="/hotelMarkupAssets/hamstercheese.jpg" alt="Cheese and Squeak Tour"
+                <img src="./hotelMarkupAssets/hamstercheese.jpg" alt="Cheese and Squeak Tour"
                     class="img-fluid package-img img3" />
             </div>
             <div class="col-md-6 text-start img2">
@@ -433,7 +433,7 @@
 
                 <div class="col-md-3 mb-4">
 
-                    <img src="/hotelMarkupAssets/24hour.png" alt="24 Hour Room Service" class="amenity-icon" />
+                    <img src="./hotelMarkupAssets/24hour.png" alt="24 Hour Room Service" class="amenity-icon" />
 
                     <p class="amenity-label mt-3">24 Hour Room Service</p>
 
@@ -441,7 +441,7 @@
 
                 <div class="col-md-3 mb-4">
 
-                    <img src="/hotelMarkupAssets/breakfast.png" alt="Complimentary Breakfast" class="amenity-icon" />
+                    <img src="./hotelMarkupAssets/breakfast.png" alt="Complimentary Breakfast" class="amenity-icon" />
 
                     <p class="amenity-label mt-3">Complimentary Breakfast</p>
 
@@ -449,7 +449,7 @@
 
                 <div class="col-md-3 mb-4">
 
-                    <img src="/hotelMarkupAssets/valet.png" alt="Valet Parking" class="amenity-icon" />
+                    <img src="./hotelMarkupAssets/valet.png" alt="Valet Parking" class="amenity-icon" />
 
                     <p class="amenity-label mt-3">Valet Parking</p>
 
@@ -457,7 +457,7 @@
 
                 <div class="col-md-3 mb-4">
 
-                    <img src="/hotelMarkupAssets/pool.png" alt="Beachside Pool" class="amenity-icon" />
+                    <img src="./hotelMarkupAssets/pool.png" alt="Beachside Pool" class="amenity-icon" />
 
                     <p class="amenity-label mt-3">Beachside Pool</p>
 
@@ -554,7 +554,7 @@
 
         <div class="row">
             <div class="col px-0">
-                <img src="/hotelMarkupAssets/hamsterreserve.jpg" class="text-center w-100"
+                <img src="./hotelMarkupAssets/hamsterreserve.jpg" class="text-center w-100"
                     alt="hamster reserves his bowl of food">
             </div>
         </div>
@@ -578,7 +578,7 @@
 
         <div class="container bottomNAV">
 
-            <img src="/hotelMarkupAssets/Logo.png" alt="">
+            <img src="./hotelMarkupAssets/Logo.png" alt="">
 
             <br>
 
